--- a/assets/mix-manifest.json
+++ b/assets/mix-manifest.json
@@ -11,5 +11,12 @@
     "/img/clip.svg": "/img/clip.svg",
     "/img/loading_1.svg": "/img/loading_1.svg",
     "/img/olive-branches.svg": "/img/olive-branches.svg",
-    "/img/quote.svg": "/img/quote.svg"
+    "/img/quote.svg": "/img/quote.svg",
+    "/img/email.svg": "/img/email.svg",
+    "/img/location.svg": "/img/location.svg",
+    "/img/phone.svg": "/img/phone.svg",
+    "/img/fb.svg": "/img/fb.svg",
+    "/img/telegram.svg": "/img/telegram.svg",
+    "/img/vk.svg": "/img/vk.svg",
+    "/img/whatsapp.svg": "/img/whatsapp.svg"
 }
