добавляет адаптив и сжимает картинки

--- a/assets/mix-manifest.json
+++ b/assets/mix-manifest.json
@@ -9,13 +9,14 @@
     "/js/vendor.js.map": "/js/vendor.js.map",
     "/img/arrow.svg": "/img/arrow.svg",
     "/img/clip.svg": "/img/clip.svg",
-    "/img/loading_1.svg": "/img/loading_1.svg",
-    "/img/olive-branches.svg": "/img/olive-branches.svg",
-    "/img/quote.svg": "/img/quote.svg",
     "/img/email.svg": "/img/email.svg",
-    "/img/location.svg": "/img/location.svg",
-    "/img/phone.svg": "/img/phone.svg",
     "/img/fb.svg": "/img/fb.svg",
+    "/img/loading_1.svg": "/img/loading_1.svg",
+    "/img/location.svg": "/img/location.svg",
+    "/img/olive-branches.svg": "/img/olive-branches.svg",
+    "/img/phone.svg": "/img/phone.svg",
+    "/img/quote.svg": "/img/quote.svg",
+    "/img/right-button.svg": "/img/right-button.svg",
     "/img/telegram.svg": "/img/telegram.svg",
     "/img/vk.svg": "/img/vk.svg",
     "/img/whatsapp.svg": "/img/whatsapp.svg"
