--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-select": "^3.10.8",
     "vue-slide-up-down": "^2.0.1",
-    "vue-the-mask": "^0.11.1"
+    "vue-the-mask": "^0.11.1",
+    "vue-youtube-embed": "^2.2.2"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
