--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
 		"gulp-webp-html": "^1.0.2",
 		"gulp-webpcss": "^1.1.1",
 		"imagemin-webp": "latest",
+		"sass": "^1.49.11",
 		"transform-runtime": "0.0.0",
 		"webp-converter": "^2.2.3"
 	},
 	"scripts": {
 		"gulp": "gulp",
 		"minify": "gulp minify"
+	},
+	"dependencies": {
+		"aos": "^2.3.4"
 	}
 }
